fix toList not supported in java 8